--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <meta charset="utf-8"/>
 <title>Play Worlde of Finance!</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TRNJ8TR7C1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-5XD5763');</script>
-
+  gtag('config', 'G-TRNJ8TR7C1');
+</script> 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
 <style>
@@ -858,10 +860,6 @@ transform: translateY(50%);
 
 </head>
 <body> 
-  
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5XD5763"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-
     <div class="game-desc-small-outer">
         <div class="modal-footer-left">
             <div class="modal-footer-left-inner">
